--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,14 @@
 <h1>Listing all Articles</h1>
 
 <p>
-  <%= link_to 'Create New Article', new_article_path %>
+  <%= link_to 'HomePage', root_path %> | <%= link_to 'Create New Article', new_article_path %>
 </p>
 
 <table>
   <tr>
     <th>Title</th>
     <th>Description</th>
-    <th colspan="2">Action</th>
+    <th colspan="3">Action</th>
   </tr>
   
   <% @articles.each do |article| %>
@@ -17,6 +17,7 @@
       <td><%= article.description %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
+      <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %></td>
     </tr>
   <% end %>
 </table>
