--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,4 @@
-<div style="text-align: center;">
-  <h1>Alpha Blog HomePage</h1>
-      
-  <div>
-    <%= image_tag 'alpha-blog.jpg' %>
-  </div>
-  <div>
-    <p>The Alpha Blog is the first application to be developed on Ruby on rails as the part of the learning process.</p>
-  </div>
-
-  <button><%= link_to 'Alpha Blog', articles_path %></button>
-  <button><%= link_to 'About', about_path %></button>
+<div class="jumbotron center">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg" %>
 </div>
