--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,13 +1,4 @@
-<% if @article.errors.any? %>
-  <h3>Following erros were encoutered!</h3>
-  <% @article.errors.full_messages.each do |msg| %>
-    <ul>
-      <li>
-        <%= msg %>
-      </li>
-    </ul>
-  <% end %>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
 <div class="row">
   <div class="col-xs-12">
