--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,4 @@
-<div style="text-align: center;">
-  <h1>About Alpha Blog</h1>
-      
-  <div>
-    <%= image_tag 'about.jpg' %>
-  </div>
-  <div>
-    <p>This is the About page of Alpha Blog</p>
-  </div>
-
-  <button><%= link_to 'HomePage', root_path %></button>
+<div class="jumbotron center aboutpage">
+  <h1>About ALPHA BLOG</h1>
+  <%= link_to "Learn more", "#", class: "btn btn-primary btn-lg" %>
 </div>
