--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron center">
+<div class="jumbotron center homepage">
   <h1>ALPHA BLOG</h1>
   <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg" %>
 </div>
