--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,7 +43,7 @@
 }
 
 .article-actions {
-  border-top: 1px solid #878787;
+  border-top: 1px solid #dbdbdb;
   padding-top: 5px;
 }
 
@@ -57,7 +57,7 @@
 }
 
 .article-body {
-  border-top: 1px solid #878787;
+  border-top: 1px solid #dbdbdb;
   padding-top: 15px;
   padding-bottom: 15px;
 }
@@ -65,7 +65,7 @@
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #878787;
+  border-top: 1px solid #dbdbdb;
   color: #777;
 }
 
