--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,11 @@
   font-weight: bold;
 }
 
+.article-meta-details {
+  border-top: 1px solid #dbdbdb;
+  margin-top: 15px;
+}
+
 .article-actions {
   border-top: 1px solid #dbdbdb;
   padding-top: 5px;
