Create show action and add gravatar image

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,12 @@
   font-weight: bold;
 }
 
+.img-circle {
+  border-radius: 50%;
+  border: 4px solid #dbdbdb;
+  padding: 0px;
+}
+
 .article-meta-details {
   border-top: 1px solid #dbdbdb;
   margin-top: 15px;
