--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,6 +73,11 @@
   padding-bottom: 15px;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0px;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
