--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,17 +14,37 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "All Articles", articles_path %></li>
+        <li><%= link_to "Articles", articles_path %></li>
+        <li><%= link_to "Users", users_path %></li>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Create New Articles", new_article_path %></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Future link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more future link</a></li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "Create New Article", new_article_path %></li>
-            <li role="separator" class="divider"></li>
-            <li><%= link_to "About", about_path %></li>
-          </ul>
-        </li>
+        <% if logged_in? %>
+          <li><%= link_to "Log Out", logout_path, method: :delete %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+              <li><%= link_to "View your profile", user_path(current_user) %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Future Link", "#" %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Log In", login_path %></li>
+          <li><%= link_to "Sign Up", signup_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
