--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,9 +16,23 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Articles", articles_path %></li>
         <li><%= link_to "Bloggers", users_path %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "All Categories", categories_path %></li>
+            <li role="separator" class="divider"></li>
+            <% Category.all.each do |category| %>
+              <li><%= link_to "#{category.name}", category_path(category) %></li>
+            <% end %>
+            <% if logged_in? and current_user.admin?%>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Create new category", new_category_path %></li>
+            <% end %>
+          </ul>
+        </li>
         <% if logged_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Create New Articles", new_article_path %></li>
               <li role="separator" class="divider"></li>
