--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,18 +15,17 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to "Articles", articles_path %></li>
-        <li><%= link_to "Bloggers", users_path %></li>
+        <li><%= link_to "Users", users_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "All Categories", categories_path %></li>
-            <li role="separator" class="divider"></li>
             <% Category.all.each do |category| %>
               <li><%= link_to "#{category.name}", category_path(category) %></li>
             <% end %>
             <% if logged_in? and current_user.admin?%>
               <li role="separator" class="divider"></li>
-              <li><%= link_to "Create new category", new_category_path %></li>
+              <li><%= link_to "Create New Category", new_category_path %></li>
             <% end %>
           </ul>
         </li>
@@ -35,10 +34,6 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Create New Articles", new_article_path %></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Future link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more future link</a></li>
             </ul>
           </li>
         <% end %>
@@ -52,7 +47,7 @@
               <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
               <li><%= link_to "View your profile", user_path(current_user) %></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to "Future Link", "#" %></li>
+              <li><%= link_to "About", about_path %></li>
             </ul>
           </li>
         <% else %>
